--- a/charts/kyverno/templates/reports-controller/rolebinding.yaml
+++ b/charts/kyverno/templates/reports-controller/rolebinding.yaml
@@ -3,14 +3,14 @@
 kind: RoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
-  name: {{ template "kyverno.reports-controller.roleName" . }}
+  name: {{.Values.k8sPrefix}}-rolebinding-{{.Values.customer}}-{{.Values.purpose}}-{{ template "kyverno.reports-controller.name" . }}-{{.Values.stage}}
   labels:
     {{- include "kyverno.reports-controller.labels" . | nindent 4 }}
   namespace: {{ template "kyverno.namespace" . }}
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: Role
-  name: {{ template "kyverno.reports-controller.roleName" . }}
+  name: {{.Values.k8sPrefix}}-role-{{.Values.customer}}-{{.Values.purpose}}-{{ template "kyverno.reports-controller.name" . }}-{{.Values.stage}}
 subjects:
   - kind: ServiceAccount
     name: {{ template "kyverno.reports-controller.serviceAccountName" . }}
