--- a/charts/kyverno/templates/cleanup/clusterrolebinding.yaml
+++ b/charts/kyverno/templates/cleanup/clusterrolebinding.yaml
@@ -1,14 +1,14 @@
 kind: ClusterRoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
-  name: {{ template "kyverno.name" . }}:cleanup-jobs
+  name: {{.Values.k8sPrefix}}-clusterrolebinding-{{.Values.customer}}-{{.Values.purpose}}-{{ template "kyverno.name" . }}-cleanup-jobs-{{.Values.stage}}
   labels:
     {{- include "kyverno.labels.merge" (list (include "kyverno.labels.common" .) (include "kyverno.matchLabels.common" .)) | nindent 4 }}
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
-  name: {{ template "kyverno.name" . }}:cleanup-jobs
+  name: {{.Values.k8sPrefix}}-clusterrole-{{.Values.customer}}-{{.Values.purpose}}-{{ template "kyverno.name" . }}-cleanup-jobs-{{.Values.stage}}
 subjects:
   - kind: ServiceAccount
-    name: {{ template "kyverno.name" . }}-cleanup-jobs
+    name: {{.Values.k8sPrefix}}-sa-{{.Values.customer}}-{{.Values.purpose}}-{{ template "kyverno.name" . }}-cleanup-jobs-{{.Values.stage}}
     namespace: {{ template "kyverno.namespace" . }}
