--- a/charts/kyverno/templates/cleanup/serviceaccount.yaml
+++ b/charts/kyverno/templates/cleanup/serviceaccount.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ template "kyverno.name" . }}-cleanup-jobs
+  name: {{.Values.k8sPrefix}}-sa-{{.Values.customer}}-{{.Values.purpose}}-{{ template "kyverno.name" . }}-cleanup-jobs-{{.Values.stage}}
   namespace: {{ template "kyverno.namespace" . }}
   labels:
     {{- include "kyverno.labels.merge" (list (include "kyverno.labels.common" .) (include "kyverno.matchLabels.common" .)) | nindent 4 }}
