--- a/charts/kyverno/templates/rbac/policies.yaml
+++ b/charts/kyverno/templates/rbac/policies.yaml
@@ -2,7 +2,7 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
-  name: {{ template "kyverno.rbac.roleName" . }}:admin:policies
+  name: {{ template "kyverno.rbac.roleName" . }}-admin-policies-{{.Values.stage}}
   labels:
     {{- include "kyverno.rbac.labels.admin" . | nindent 4 }}
 rules:
@@ -25,7 +25,7 @@ rules:
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
-  name: {{ template "kyverno.rbac.roleName" . }}:view:policies
+  name: {{ template "kyverno.rbac.roleName" . }}-view-policies-{{.Values.stage}}
   labels:
     {{- include "kyverno.rbac.labels.view" . | nindent 4 }}
 rules:
