--- a/charts/kyverno/templates/rbac/policyreports.yaml
+++ b/charts/kyverno/templates/rbac/policyreports.yaml
@@ -2,7 +2,7 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
-  name: {{ template "kyverno.rbac.roleName" . }}:admin:policyreports
+  name: {{ template "kyverno.rbac.roleName" . }}-admin-policyreports-{{.Values.stage}}
   labels:
     {{- include "kyverno.rbac.labels.admin" . | nindent 4 }}
 rules:
@@ -23,7 +23,7 @@ rules:
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
-  name: {{ template "kyverno.rbac.roleName" . }}:view:policyreports
+  name: {{ template "kyverno.rbac.roleName" . }}-view-policyreports-{{.Values.stage}}
   labels:
     {{- include "kyverno.rbac.labels.view" . | nindent 4 }}
 rules:
