--- a/charts/kyverno/templates/rbac/reports.yaml
+++ b/charts/kyverno/templates/rbac/reports.yaml
@@ -2,7 +2,7 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
-  name: {{ template "kyverno.rbac.roleName" . }}:admin:reports
+  name: {{ template "kyverno.rbac.roleName" . }}-admin-reports-{{.Values.stage}}
   labels:
     {{- include "kyverno.rbac.labels.admin" . | nindent 4 }}
 rules:
@@ -38,7 +38,7 @@ rules:
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
-  name: {{ template "kyverno.rbac.roleName" . }}:view:reports
+  name: {{ template "kyverno.rbac.roleName" . }}-view-reports-{{.Values.stage}}
   labels:
     {{- include "kyverno.rbac.labels.view" . | nindent 4 }}
 rules:
