--- a/charts/kyverno/templates/rbac/updaterequests.yaml
+++ b/charts/kyverno/templates/rbac/updaterequests.yaml
@@ -2,7 +2,7 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
-  name: {{ template "kyverno.rbac.roleName" . }}:admin:updaterequests
+  name: {{ template "kyverno.rbac.roleName" . }}-admin-updaterequests-{{.Values.stage}}
   labels:
     {{- include "kyverno.rbac.labels.admin" . | nindent 4 }}
 rules:
@@ -22,7 +22,7 @@ rules:
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
-  name: {{ template "kyverno.rbac.roleName" . }}:view:updaterequests
+  name: {{ template "kyverno.rbac.roleName" . }}-view-updaterequests-{{.Values.stage}}
   labels:
     {{- include "kyverno.rbac.labels.view" . | nindent 4 }}
 rules:
