--- a/charts/argo-cd/templates/argocd-configs/argocd-cm.yaml
+++ b/charts/argo-cd/templates/argocd-configs/argocd-cm.yaml
@@ -31,5 +31,11 @@ data:
   resource.customizations.ignoreDifferences.admissionregistration.k8s.io_MutatingWebhookConfiguration: |
     jqPathExpressions:
     - '.webhooks[]?.clientConfig.caBundle'
+  resource.customizations.ignoreDifferences.apps_Deployment: |
+    jsonPointers:
+    - /spec/template/spec/affinity/podAntiAffinity
+  resource.customizations.ignoreDifferences.apps_StatefulSet: |
+    jsonPointers:
+    - /spec/template/spec/affinity/podAntiAffinity
   {{- include "argo-cd.config.cm" . | trim | nindent 2 }}
 {{- end }}
