--- a/charts/argo-cd/templates/argocd-application-controller/metrics.yaml
+++ b/charts/argo-cd/templates/argocd-application-controller/metrics.yaml
@@ -12,6 +12,7 @@ metadata:
   {{- if or .Values.controller.metrics.service.annotations .Values.global.addPrometheusAnnotations }}
   annotations:
     {{- if .Values.global.addPrometheusAnnotations }}
+    newrelic.io/scrape: "true"
     prometheus.io/port: {{ .Values.controller.metrics.service.servicePort | quote }}
     prometheus.io/scrape: "true"
     {{- end }}
