--- a/charts/nifikop/values.yaml
+++ b/charts/nifikop/values.yaml
@@ -50,7 +50,7 @@ rbacEnable: true
 ## If true, create serviceAccount
 ##
 serviceAccount:
-  create: false
+  create: true
 
 metrics:
   ## if true deploy service for metrics access
