--- a/charts/cert-manager/values.yaml
+++ b/charts/cert-manager/values.yaml
@@ -161,7 +161,7 @@ namespace: ""
 
 serviceAccount:
   # Specifies whether a service account should be created
-  create: false
+  create: true
 
   # The name of the service account to use.
   # If not set and create is true, a name is generated using the fullname template
@@ -774,7 +774,7 @@ webhook:
 
   serviceAccount:
     # Specifies whether a service account should be created
-    create: false
+    create: true
 
     # The name of the service account to use.
     # If not set and create is true, a name is generated using the fullname template
@@ -1057,7 +1057,7 @@ cainjector:
 
   serviceAccount:
     # Specifies whether a service account should be created
-    create: false
+    create: true
 
     # The name of the service account to use.
     # If not set and create is true, a name is generated using the fullname template
