set name overrides

--- a/charts/aws-load-balancer/values.yaml
+++ b/charts/aws-load-balancer/values.yaml
@@ -17,8 +17,8 @@ image:
   pullPolicy: IfNotPresent
 
 imagePullSecrets: []
-nameOverride: ""
-fullnameOverride: ""
+nameOverride: "aws-lb"
+fullnameOverride: "aws-lb"
 
 # AWS LBC only has 1 main working pod, other pods are just standby
 # the purpose of enable hpa is to survive load induced failure by the calls to the aws-load-balancer-webhook-service
