--- a/charts/karpenter/values.yaml
+++ b/charts/karpenter/values.yaml
@@ -4,9 +4,9 @@ purpose: dataplatform
 stage: dev
 
 # -- Overrides the chart's name.
-nameOverride: ""
+nameOverride: "karpenter"
 # -- Overrides the chart's computed fullname.
-fullnameOverride: ""
+fullnameOverride: "karpenter"
 # -- Additional labels to add into metadata.
 additionalLabels: {}
 # app: karpenter
