--- a/charts/argo-cd/values.yaml
+++ b/charts/argo-cd/values.yaml
@@ -7,9 +7,9 @@ purpose: dataplatform
 stage: dev
 
 # -- Provide a name in place of `argocd`
-nameOverride: argocd
+nameOverride: "argocd"
 # -- String to fully override `"argo-cd.fullname"`
-fullnameOverride: ""
+fullnameOverride: "argocd"
 # -- Override the Kubernetes version, which is used to evaluate certain manifests
 kubeVersionOverride: ""
 # Override APIVersions
