--- a/charts/cert-manager/templates/webhook-mutating-webhook.yaml
+++ b/charts/cert-manager/templates/webhook-mutating-webhook.yaml
@@ -1,7 +1,7 @@
 apiVersion: admissionregistration.k8s.io/v1
 kind: MutatingWebhookConfiguration
 metadata:
-  name: cert-manager-mutating-webhook-cfg
+  name: cert-manager-webhook
   labels:
     app: {{ template "cert-manager.name" . }}-{{ include "webhook.name" . }}
     app.kubernetes.io/name: {{ template "cert-manager.name" . }}-{{ include "webhook.name" . }}
