--- a/charts/keda/templates/metrics-server/deployment.yaml
+++ b/charts/keda/templates/metrics-server/deployment.yaml
@@ -42,6 +42,7 @@ spec:
         {{- toYaml .Values.additionalAnnotations | nindent 8 }}
         {{- end }}
         {{- if and .Values.prometheus.metricServer.enabled ( not (or .Values.prometheus.metricServer.podMonitor.enabled .Values.prometheus.metricServer.serviceMonitor.enabled )) }}
+        newrelic.io/scrape: "true"
         prometheus.io/scrape: "true"
         prometheus.io/port: {{ .Values.prometheus.metricServer.port | quote }}
         {{- end }}
