--- a/charts/keda/templates/metrics-server/service.yaml
+++ b/charts/keda/templates/metrics-server/service.yaml
@@ -10,6 +10,7 @@ metadata:
   {{- if or .Values.additionalAnnotations .Values.service.annotations (and .Values.prometheus.metricServer.enabled ( not (or .Values.prometheus.metricServer.podMonitor.enabled .Values.prometheus.metricServer.serviceMonitor.enabled )))}}
   annotations:
     {{- if and .Values.prometheus.metricServer.enabled ( not (or .Values.prometheus.metricServer.podMonitor.enabled .Values.prometheus.metricServer.serviceMonitor.enabled )) }}
+    newrelic.io/scrape: "true"
     prometheus.io/scrape: "true"
     prometheus.io/port: {{ .Values.prometheus.metricServer.port | quote }}
     prometheus.io/path: "/metrics"
