--- a/charts/kyverno/values.yaml
+++ b/charts/kyverno/values.yaml
@@ -12,7 +12,7 @@ templating:
 global:
 
   image:
-    # -- (string) Global value that allows to set a single image registry across all deployments.
+    # (string) Global value that allows to set a single image registry across all deployments.
     # When set, it will override any values set under `.image.registry` across the chart.
     registry: ~
 
