--- a/charts/traefik-data/templates/tlsstore.yaml
+++ b/charts/traefik-data/templates/tlsstore.yaml
@@ -2,10 +2,13 @@
 apiVersion: traefik.io/v1alpha1
 kind: TLSStore
 metadata:
-  name: {{ $name }}
-  namespace: {{ template "traefik.namespace" $ }}
+  annotations:
+    kubernetes.io/ingress.class: traefik-data
   labels:
     {{- include "traefik.labels" $ | nindent 4 }}
+    traffic-type: data
+  name: {{ $name }}
+  namespace: {{ template "traefik.namespace" $ }}
 spec:
   {{- toYaml $config | nindent 2 }}
 ---
