--- a/charts/traefik-admin/templates/middlewares.yaml
+++ b/charts/traefik-admin/templates/middlewares.yaml
@@ -29,7 +29,7 @@ spec:
       - "403-404"
     query: /{status}.html
     service:
-      name: nginx
+      name: {{.Values.k8sPrefix}}-svc-{{.Values.customer}}-{{.Values.purpose}}-nginx-errors-{{.Values.stage}}
       port: 80
 ---
 apiVersion: traefik.io/v1alpha1
