--- a/charts/traefik-data/values.yaml
+++ b/charts/traefik-data/values.yaml
@@ -789,7 +789,7 @@ service:
   ## -- Single service is using `MixedProtocolLBService` feature gate.
   ## -- When set to false, it will create two Service, one for TCP and one for UDP.
   single: true
-  type: LoadBalancer
+  type: NodePort
   # -- Additional annotations applied to both TCP and UDP services (e.g. for cloud provider specific config)
   annotations: {}
   # -- Additional annotations for TCP service only
@@ -800,10 +800,8 @@ service:
   labels: {}
   # -- Additional entries here will be added to the service spec.
   # -- Cannot contain type, selector or ports entries.
-  spec: {}
-  # externalTrafficPolicy: Cluster
-  # loadBalancerIP: "1.2.3.4"
-  # clusterIP: "2.3.4.5"
+  spec:
+    externalTrafficPolicy: Local
   loadBalancerSourceRanges: []
   # - 192.168.0.1/32
   # - 172.16.0.0/16
