--- a/charts/karpenter/values.yaml
+++ b/charts/karpenter/values.yaml
@@ -58,9 +58,9 @@ priorityClassName: system-cluster-critical
 terminationGracePeriodSeconds:
 # -- Bind the pod to the host network.
 # This is required when using a custom CNI.
-hostNetwork: false
+hostNetwork: true
 # -- Configure the DNS Policy for the pod
-dnsPolicy: ClusterFirst
+dnsPolicy: ClusterFirstWithHostNet
 # -- Configure DNS Config for the pod
 dnsConfig: {}
 #  options:
