--- a/charts/aws-load-balancer/templates/deployment.yaml
+++ b/charts/aws-load-balancer/templates/deployment.yaml
@@ -34,6 +34,7 @@ spec:
         {{- if .Values.podAnnotations }}
         {{- toYaml .Values.podAnnotations | nindent 8 }}
         {{- end }}
+        fluentbit.io/exclude: "true"
     spec:
     {{- with .Values.imagePullSecrets }}
       imagePullSecrets:
