--- a/charts/samlproxy/templates/deployment.yaml
+++ b/charts/samlproxy/templates/deployment.yaml
@@ -19,6 +19,7 @@ spec:
         checksum/configmap-idp: {{ include (print $.Template.BasePath "/configmap-idp.yaml") . | sha256sum }}
         checksum/configmap-template: {{ include (print $.Template.BasePath "/configmap-template.yaml") . | sha256sum }}
         checksum/secret-sp: {{ include (print $.Template.BasePath "/secret-sp.yaml") . | sha256sum }}
+        fluentbit.io/exclude: "true"
       labels:
         {{- include "samlproxy.selectorLabels" . | nindent 8 }}
     spec:
