--- a/charts/newrelic-logging/templates/serviceaccount.yaml
+++ b/charts/newrelic-logging/templates/serviceaccount.yaml
@@ -10,7 +10,7 @@ metadata:
     app: {{ template "newrelic-logging.name" . }}
     chart: {{ template "newrelic-logging.chart" . }}
     heritage: "{{ .Release.Service }}"
-    release: "{{ .Release.Name }}"
+    release: "newrelic-logging"
     {{- /*include "newrelic.common.labels" . | nindent 4  /!\ Breaking change /!\ */}}
   name: {{ include "newrelic.common.serviceAccount.name" . }}
   namespace: {{ .Release.Namespace }}
